// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ManageConditionsTools — characterization > apply-condition — fatigued applied (raw passthrough) 1`] = `
{
  "content": [
    {
      "text": "{"actorId":"actor001234567890","conditionKey":"fatigued","stackCount":1}",
      "type": "text",
    },
  ],
  "structuredContent": {
    "actorId": "actor001234567890",
    "conditionKey": "fatigued",
    "stackCount": 1,
  },
}
`;

exports[`ManageConditionsTools — characterization > apply-condition — stunned with explicit value 2 1`] = `
{
  "content": [
    {
      "text": "{"actorId":"actor001234567890","conditionKey":"stunned","stackCount":2}",
      "type": "text",
    },
  ],
  "structuredContent": {
    "actorId": "actor001234567890",
    "conditionKey": "stunned",
    "stackCount": 2,
  },
}
`;

exports[`ManageConditionsTools — characterization > list-conditions — empty (no conditions) 1`] = `[]`;

exports[`ManageConditionsTools — characterization > list-conditions — two conditions on actor 1`] = `
[
  {
    "disabled": false,
    "id": "effect001",
    "name": "Fatigued",
    "statuses": [
      "fatigued",
    ],
  },
  {
    "disabled": false,
    "id": "effect002",
    "name": "Stunned",
    "statuses": [
      "stunned",
    ],
  },
]
`;

exports[`ManageConditionsTools — characterization > remove-condition — fatigued 1 stack removed 1`] = `
{
  "content": [
    {
      "text": "{"actorId":"actor001234567890","conditionKey":"fatigued","remainingCount":0}",
      "type": "text",
    },
  ],
  "structuredContent": {
    "actorId": "actor001234567890",
    "conditionKey": "fatigued",
    "remainingCount": 0,
  },
}
`;
